--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -20,6 +20,9 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+	<properties>
+	  <version.spring>3.1.3.RELEASE</version.spring>
+    </properties>
   <dependencies>
     <dependency>
       <groupId>c3p0</groupId>
@@ -37,25 +40,25 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>${project.version}</version>
+      <version>${version.spring}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>${project.version}</version>
+      <version>${version.spring}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>${project.version}</version>
+      <version>${version.spring}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
-      <version>${project.version}</version>
+      <version>${version.spring}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
