--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -36,6 +36,26 @@
       <version>1.1</version>
       <scope>provided</scope>
     </dependency>
+   <dependency>
+      <groupId>com.ibm.websphere</groupId>
+      <artifactId>com.springsource.com.ibm.websphere.uow</artifactId>
+      <version>6.0.2.17</version>
+      <type>jar</type>
+      <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>com.springsource.javax.ejb</artifactId>
+      <version>3.0.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.resource</groupId>
+      <artifactId>com.springsource.javax.resource</artifactId>
+      <version>1.5.0</version>
+      <optional>true</optional>
+    </dependency>
     <dependency>
 		<groupId>commons-logging</groupId>
 		<artifactId>commons-logging</artifactId>
@@ -64,7 +84,7 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-tx</artifactId>
       <version>${version.spring}</version>
-      <scope>compile</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>hsqldb</groupId>
