--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -3,14 +3,12 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.springframework</groupId>
-  <artifactId>spring-jdbc</artifactId>
+  <artifactId>spring-jdbc-bare</artifactId>
   <packaging>jar</packaging>
-  <version>3.1.4.BUILD-SNAPSHOT</version>
   <parent>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-parent</artifactId>
-    <relativePath>../org.springframework.spring-parent</relativePath>
+    <groupId>com.github.pdudits</groupId>
+    <artifactId>spring-jdbc-bare-parent</artifactId>
+    <relativePath>..</relativePath>
     <version>3.1.4.BUILD-SNAPSHOT</version>
   </parent>
   <licenses>
