--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -6,18 +6,11 @@
   <artifactId>spring-jdbc-bare</artifactId>
   <packaging>jar</packaging>
   <parent>
-    <groupId>com.github.pdudits</groupId>
+    <groupId>com.github.jdbc-bare</groupId>
     <artifactId>spring-jdbc-bare-parent</artifactId>
     <relativePath>..</relativePath>
-    <version>3.1.5.BUILD-SNAPSHOT</version>
+    <version>3.1.4.1-SNAPSHOT</version>
   </parent>
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
   <dependencies>
     <dependency>
       <groupId>c3p0</groupId>
