--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -24,24 +24,16 @@
       <version>1.1</version>
       <scope>provided</scope>
     </dependency>
-   <dependency>
-      <groupId>com.ibm.websphere</groupId>
-      <artifactId>com.springsource.com.ibm.websphere.uow</artifactId>
-      <version>6.0.2.17</version>
-      <type>jar</type>
-      <scope>provided</scope>
-      <optional>true</optional>
-    </dependency>
     <dependency>
       <groupId>javax.ejb</groupId>
-      <artifactId>com.springsource.javax.ejb</artifactId>
-      <version>3.0.0</version>
+      <artifactId>ejb-api</artifactId>
+      <version>3.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>javax.resource</groupId>
-      <artifactId>com.springsource.javax.resource</artifactId>
-      <version>1.5.0</version>
+      <artifactId>connector-api</artifactId>
+      <version>1.5</version>
       <optional>true</optional>
     </dependency>
     <dependency>
@@ -90,15 +82,15 @@
     </dependency> 
     <dependency>
       <groupId>org.apache.derby</groupId>
-      <artifactId>com.springsource.org.apache.derby</artifactId>
-      <version>10.5.1000001.764942</version>
+      <artifactId>derby</artifactId>
+      <version>10.5.3.0_1</version>
       <scope>compile</scope>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.apache.derby</groupId>
-      <artifactId>com.springsource.org.apache.derby.client</artifactId>
-      <version>10.5.1000001.764942</version>
+      <artifactId>derbyclient</artifactId>
+      <version>10.5.3.0_1</version>
       <scope>compile</scope>
       <optional>true</optional>
     </dependency>
