--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -136,6 +136,54 @@
            </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.7</version>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+              <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <instructions>
+              <Import-Package>
+                com.ibm.websphere.rsadapter;version="0";resolution:="optional",
+                com.ibm.ws.rsadapter.jdbc;version="0";resolution:="optional",
+                com.mchange.v2.c3p0;version="[0.9.1, 2.0.0)";resolution:="optional",
+                com.sun.rowset;version="[1.0.1, 2.0.0)";resolution:="optional",
+                javax.naming;version="0";resolution:="optional",
+                javax.sql;version="0",
+                javax.sql.rowset;version="0",
+                javax.transaction;version="[1.0.1, 2.0.0)";resolution:="optional",
+                javax.xml.transform;version="0";resolution:="optional",
+                javax.xml.transform.dom;version="0";resolution:="optional",
+                oracle.jdbc;version="0";resolution:="optional",
+                oracle.sql;version="0";resolution:="optional",
+                org.apache.commons.logging;version="[1.1.1, 2.0.0)",
+                org.apache.derby.impl.io;version="[10.5.0, 11.0.0)";resolution:="optional",
+                org.apache.derby.jdbc;version="[10.5.0, 11.0.0)";resolution:="optional",
+                org.h2;version="[1.0.0, 2.0.0)";resolution:="optional",
+                org.hsqldb;version="[1.8.0, 2.0.0)";resolution:="optional",
+                org.jboss.resource.adapter.jdbc;version="0";resolution:="optional",
+                org.w3c.dom;version="0";resolution:="optional",
+                weblogic.jdbc.extensions;version="0";resolution:="optional"
+              </Import-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+          </archive>
+        </configuration>
+      </plugin>
 	  </plugins>
   </build>
 </project>
