--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -173,6 +173,11 @@
                 org.w3c.dom;version="0";resolution:="optional",
                 weblogic.jdbc.extensions;version="0";resolution:="optional"
               </Import-Package>
+              <Export-Package>
+                org.springframework.jdbc.*,
+                org.springframework.dao,
+                org.springframework.transaction
+              </Export-Package>
           </instructions>
         </configuration>
       </plugin>
