--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>spring-jdbc-bare</artifactId>
   <packaging>jar</packaging>
@@ -9,7 +7,7 @@
     <groupId>com.github.jdbc-bare</groupId>
     <artifactId>spring-jdbc-bare-parent</artifactId>
     <relativePath>..</relativePath>
-    <version>3.1.4.1-SNAPSHOT</version>
+    <version>3.1.4.1</version>
   </parent>
   <dependencies>
     <dependency>
