--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -10,7 +8,7 @@
   <groupId>com.github.jdbc-bare</groupId>
   <artifactId>spring-jdbc-bare-parent</artifactId>
   <name>Spring JDBC Bare - Parent</name>
-  <version>3.1.4.1-SNAPSHOT</version>
+  <version>3.1.4.1</version>
   <packaging>pom</packaging>
   <description>Spring JDBC Bare Parent</description>
   <url>https://github.com/jdbc-bare/spring-jdbc-bare</url>
@@ -18,6 +16,7 @@
     <url>https://github.com/jdbc-bare/spring-jdbc-bare</url>
     <connection>scm:git:https://github.com/jdbc-bare/spring-jdbc-bare.git</connection>
     <developerConnection>scm:git:https://github.com/jdbc-bare/spring-jdbc-bare.git</developerConnection>
+    <tag>spring-jdbc-bare-3.1.4.1</tag>
   </scm>
   <licenses>
     <license>
