--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github.jdbc-bare</groupId>
     <artifactId>spring-jdbc-bare-parent</artifactId>
     <relativePath>..</relativePath>
-    <version>3.1.4.1</version>
+    <version>3.1.4.2-SNAPSHOT</version>
   </parent>
   <dependencies>
     <dependency>
