--- a/org.springframework.jdbc/pom.xml
+++ b/org.springframework.jdbc/pom.xml
@@ -165,6 +165,8 @@
                 org.hsqldb;version="[1.8.0, 2.0.0)";resolution:="optional",
                 org.jboss.resource.adapter.jdbc;version="0";resolution:="optional",
 		weblogic.jdbc.extensions;version="0";resolution:="optional",
+		javax.xml.bind,
+		javax.xml.bind.annotation,
 		*
               </Import-Package>
               <Export-Package>
